--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
     <title>Instagram</title>
 </head>
 <body>
-    
+    <div class="instagram-wrapper">
+        <div class="instagram-phone">
+            <img src="images/celular-completo.png" alt="celular">
+        </div>
+        <div class="instagram-continue">
+            <div class="group">
+                <img src="images/logo-instagram.JPG" class="instagram-logo" alt="Instagram Logo">
+                <div class="profile-photo">
+                    <img src="images/foto-perfil.jpg" alt="Foto de Perfil">
+                    
+                </div>
+                <a href="#" class="instagram-login">Continue como ricardofrance</a>
+                <a href="#" class="instagram-logout">Remover conta</a>
+            </div>
+            <div class="group">
+                <p class="not-account">Não é ricardofrance?</p>
+                <p class="not-account">
+                    <span class="link-blue">Alternar contas</span>
+                    ou 
+                    <span class="link-blue">Inscreva-se.</span>
+                    <div class="get-the-app">
+                        <p class="get-app">Baixe o aplicativo.</p>
+                        <div class="download">
+                            <a href="#" class="app-download"></a>
+                            <a href="#" class="app-download"></a>
+                        </div>
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
